<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:marqueeto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/doc_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/header_national_drivers_license"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <com.github.guilhermesgb.marqueeto.LabelledMarqueeEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/doc_name_text_view"
            android:hint="@string/label_edit_text_owner"
            marqueeto:iconKey="md-account-circle"
            marqueeto:iconGravity="left"
            marqueeto:labelledMarqueeEditTextStyle="@style/LabelledMarqueeEditTextCustomStyle"/>

        <LinearLayout
            android:id="@+id/doc_identify_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_edit_text">

            <com.github.guilhermesgb.marqueeto.LabelledMarqueeEditText
                android:id="@+id/identity_number_edit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.55"
                android:hint="@string/label_edit_text_identity_num"
                marqueeto:labelledMarqueeEditTextStyle="@style/LabelledMarqueeEditTextCustomStyle"/>

            <com.github.guilhermesgb.marqueeto.LabelledMarqueeEditText
                android:id="@+id/issuing_org_edit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:hint="@string/label_edit_text_issuing_org"
                marqueeto:iconKey="md-store"
                marqueeto:labelledMarqueeEditTextStyle="@style/LabelledMarqueeEditTextCustomStyle"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/person_identify_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/doc_identify_linear_layout">

            <com.github.guilhermesgb.marqueeto.LabelledMarqueeEditText
                android:id="@+id/cpf_number_edit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.55"
                android:inputType="textPassword"
                android:hint="@string/label_edit_text_cpf_num"
                marqueeto:iconKey="md-confirmation-number"
                marqueeto:labelledMarqueeEditTextStyle="@style/LabelledMarqueeEditTextCustomStyle"/>

            <com.github.guilhermesgb.marqueeto.LabelledMarqueeEditText
                android:id="@+id/birth_date_edit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:hint="@string/label_edit_text_birth_date"
                marqueeto:iconKey="md-nature"
                marqueeto:labelledMarqueeEditTextStyle="@style/LabelledMarqueeEditTextCustomStyle"/>

        </LinearLayout>

        <com.github.guilhermesgb.marqueeto.LabelledMarqueeEditText
            android:id="@+id/filiation_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/person_identify_linear_layout"
            android:hint="@string/label_edit_text_filiation"
            marqueeto:iconKey="md-supervisor-account"
            marqueeto:labelledMarqueeEditTextStyle="@style/LabelledMarqueeEditTextCustomStyle"/>

        <LinearLayout
            android:id="@+id/doc_dates_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/filiation_edit_text">

            <com.github.guilhermesgb.marqueeto.LabelledMarqueeEditText
                android:id="@+id/good_thru_edit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.55"
                android:hint="@string/label_edit_text_good_thru"
                marqueeto:iconKey="md-done"
                marqueeto:labelledMarqueeEditTextStyle="@style/LabelledMarqueeEditTextCustomStyle"/>

            <com.github.guilhermesgb.marqueeto.LabelledMarqueeEditText
                android:id="@+id/issuing_date_edit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:inputType="textPassword"
                android:hint="@string/label_edit_text_issuing_date"
                marqueeto:iconGravity="left"
                marqueeto:iconKey="md-receipt"
                marqueeto:labelledMarqueeEditTextStyle="@style/LabelledMarqueeEditTextCustomStyle"/>

        </LinearLayout>

        <com.github.guilhermesgb.marqueeto.LabelledMarqueeEditText
            android:id="@+id/location_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/doc_dates_linear_layout"
            android:hint="@string/label_edit_text_location"
            marqueeto:iconKey="md-location-on"
            marqueeto:labelledMarqueeEditTextStyle="@style/LabelledMarqueeEditTextCustomStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_edit_text"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button_save"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_button_delete"
                tools:ignore="ButtonStyle"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
